bin/testsuite/tests/compiler/src/errors/compiler635.swg
#global testerror "Err0436"
struct(T) Point {}

var x: Point
